--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -21,6 +21,7 @@ jobs:
             - name: Install node 16
               uses: actions/setup-node@v1
               with:
-                  node-version: 16.x
+                  node-version: ${{ matrix.node-version}}
             - run: npm i
+            - run: npm test
             - run: npm run build
