--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,4 +25,5 @@ jobs:
             - run: git pull origin master
             - run: npm i
             - run: npm run build
+            - run: rm -rf /var/www/tranining/reactjs-ecommerce/build/
             - run: mv /var/www/tranining/reactjs-ecommerce/_work/reactjs-ecommerce/reactjs-ecommerce/build/ /var/www/tranining/reactjs-ecommerce/build/
