--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-show-more-button": "^1.0.0",
     "redux": "^4.2.0",
     "sass": "^1.54.2",
     "swiper": "^8.3.2",
