--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.5",
+    "react-lazyload": "^3.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-show-more-button": "^1.0.0",
     "redux": "^4.2.0",
     "sass": "^1.54.2",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.4.2"
   }
 }
