--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-lazy-load-image-component": "^1.5.5",
     "react-lazyload": "^3.2.0",
     "react-loading-skeleton": "^3.1.0",
@@ -19,7 +20,7 @@
     "react-scripts": "^5.0.1",
     "react-show-more-button": "^1.0.0",
     "redux": "^4.2.0",
-    "sass": "^1.54.2",
+    "sass": "^1.55.0",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
