--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,29 +1,40 @@
-# Triggers
+name: Deploy
+
 on:
     push:
-        branches:
-            - master
+        branches: [ master ]
     pull_request:
-        branches:
-            - master
-# Functions
+        branches: [ master ]
+
 jobs:
-    # Build Job
     build:
-        # Name of the job
-        name: Build Reactjs
-        # The OS to run the job on
-        runs-on: self-hosted
-        # Steps
+
+        runs-on: ubuntu-latest
+
         steps:
-            - name: Checkout Code
-              uses: actions/checkout@v2
-            - name: Install Node
-              uses: actions/setup-node@v1
+            - uses: actions/checkout@v1
+
+            - name: SCP FOLDER
+              uses: appleboy/scp-action@master
+              env:
+                  HOST: ${{ secrets.IP }}
+                  USERNAME: ${{ secrets.USERNAME }}
+                  PORT: ${{ secrets.PORT }}
+                  PASSWORD: ${{ secrets.PASSWORD }}
               with:
-                  node-version: ${{ matrix.node-version}}
-            - run: git pull origin master
-            - run: npm i
-            - run: npm run build
-            - run: rm -rf /var/www/tranining/reactjs-ecommerce/build/
-            - run: mv /var/www/tranining/reactjs-ecommerce/_work/reactjs-ecommerce/reactjs-ecommerce/build/ /var/www/tranining/reactjs-ecommerce/build/
+                  source: "."
+                  target: "/var/www/tranining/reactjs-ecommerce"
+
+            - name: Deploy
+              uses: appleboy/ssh-action@master
+              with:
+                  HOST: ${{ secrets.IP }}
+                  USERNAME: ${{ secrets.USERNAME }}
+                  PORT: ${{ secrets.PORT }}
+                  PASSWORD: ${{ secrets.PASSWORD }}
+                  script: |
+                      cd /var/www/tranining/reactjs-ecommerce
+                      git pull origin master
+                      npm install
+                      npm run build
+                      pm2 restart api-ecm
