--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -12,7 +12,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v1
+            - uses: actions/checkout@v2
 
             - name: SCP FOLDER
               uses: appleboy/scp-action@master
@@ -32,6 +32,7 @@ jobs:
                   USERNAME: ${{ secrets.USERNAME }}
                   PORT: ${{ secrets.PORT }}
                   PASSWORD: ${{ secrets.PASSWORD }}
+                  node-version: ${{ matrix.node-version}}
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
