--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -31,7 +31,7 @@ jobs:
                   USERNAME: ${{ secrets.USERNAME }}
                   PORT: ${{ secrets.PORT }}
                   PASSWORD: ${{ secrets.PASSWORD }}
-                  node-version: ${{ matrix.node-version}}
+                  node-version: '14.x'
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
