--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.3",
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "node-sass": "^7.0.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
@@ -50,5 +54,8 @@
   },
   "devDependencies": {
     "react-router-dom": "^6.4.2"
+  },
+  "browser": {
+    "fs": false
   }
 }
