--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -33,6 +33,8 @@ jobs:
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
+                      node -v
+                      npm -v
                       npm install
                       npm run build
 #                      pm2 restart api-ecm
