--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -10,6 +10,9 @@ jobs:
     build:
 
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [14.x]
         steps:
             - uses: actions/checkout@v1
             - name: SCP FOLDER
@@ -22,7 +25,10 @@ jobs:
               with:
                   source: "."
                   target: "/var/www/tranining/reactjs-ecommerce"
-
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                node-version: ${{ matrix.node-version }}
             - name: Deploy
               uses: appleboy/ssh-action@master
               with:
