--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,10 +25,10 @@ jobs:
               with:
                   source: "."
                   target: "/var/www/tranining/reactjs-ecommerce"
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
-              with:
-                node-version: ${{ matrix.node-version }}
+#            - name: Use Node.js ${{ matrix.node-version }}
+#              uses: actions/setup-node@v3
+#              with:
+#                node-version: ${{ matrix.node-version }}
             - name: Deploy
               uses: appleboy/ssh-action@master
               with:
@@ -39,6 +39,9 @@ jobs:
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
+                      node -v
+                      npm -v
+                      nvm use v16.13.0
                       node -v
                       npm -v
                       npm install
