--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -36,6 +36,7 @@ jobs:
                   USERNAME: ${{ secrets.USERNAME }}
                   PORT: ${{ secrets.PORT }}
                   PASSWORD: ${{ secrets.PASSWORD }}
+                  node-version: 14
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
