--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -33,6 +33,8 @@ jobs:
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
+                      export NVM_DIR=~/.nvm
+                      source ~/.nvm/nvm.sh
                       nvm use v16.13.0
                       npm install
                       npm run build
