--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -32,6 +32,7 @@ jobs:
                   script: |
                       cd /var/www/tranining/reactjs-ecommerce
                       git pull origin master
+                      which nvm
                       export NVM_DIR=~/.nvm
                       source ~/.nvm/nvm.sh
                       nvm use v16.13.0
