--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,48 +1,29 @@
-name: Deploy
-
+# Triggers
 on:
     push:
-        branches: [ master ]
+        branches:
+            - master
     pull_request:
-        branches: [ master ]
+        branches:
+            - master
+# Functions
 jobs:
+    # Build Job
     build:
-
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [14.x]
+        # Name of the job
+        name: Build Reactjs
+        # The OS to run the job on
+        runs-on: self-hosted
+        # Steps
         steps:
-            - uses: actions/checkout@v1
-            - name: SCP FOLDER
-              uses: appleboy/scp-action@master
-              env:
-                  HOST: ${{ secrets.IP }}
-                  USERNAME: ${{ secrets.USERNAME }}
-                  PORT: ${{ secrets.PORT }}
-                  PASSWORD: ${{ secrets.PASSWORD }}
-              with:
-                  source: "."
-                  target: "/var/www/tranining/reactjs-ecommerce"
-            - name: Setup NodeJS 14
+            - name: Checkout Code
+              uses: actions/checkout@v2
+            - name: Install Node
               uses: actions/setup-node@v1
               with:
-                  node-version: 14
-            - name: Set NVM
-              shell: bash -l {0}
-              run: nvm install
-            - name: Deploy
-              uses: appleboy/ssh-action@master
-              with:
-                  HOST: ${{ secrets.IP }}
-                  USERNAME: ${{ secrets.USERNAME }}
-                  PORT: ${{ secrets.PORT }}
-                  PASSWORD: ${{ secrets.PASSWORD }}
-                  node-version: 14
-                  script: |
-                      cd /var/www/tranining/reactjs-ecommerce
-                      git pull origin master
-                      node -v
-                      npm install
-                      npm run build
-#                      pm2 restart api-ecm
+                  node-version: ${{ matrix.node-version}}
+            - run: git pull origin master
+            - run: npm i
+            - run: npm run build
+            - run: rm -rf /var/www/tranining/reactjs-ecommerce/build/
+            - run: mv /var/www/tranining/reactjs-ecommerce/_work/reactjs-ecommerce/reactjs-ecommerce/build/ /var/www/tranining/reactjs-ecommerce/build/
