--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.3",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "node-sass": "^7.0.1",
     "os-browserify": "^0.3.0",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
+    "react-js-pagination": "^3.0.3",
     "react-lazy-load-image-component": "^1.5.5",
     "react-lazyload": "^3.2.0",
     "react-loading-skeleton": "^3.1.0",
