--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -35,7 +37,8 @@
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "swiper": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
