--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -29,7 +30,7 @@
     "react-lazyload": "^3.2.0",
     "react-loading-skeleton": "^3.1.0",
     "react-query": "^3.39.2",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-router": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-show-more-button": "^1.0.0",
@@ -66,6 +67,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@redux-devtools/core": "^3.13.1",
     "react-router-dom": "^6.4.2"
   },
   "browser": {
