--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-show-more-button": "^1.0.0",
+    "react-show-more-text": "^1.6.2",
     "reactjs-popup": "^2.0.5",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
