--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux": "^4.2.0",
     "sass": "^1.55.0",
     "swiper": "^8.3.2",
+    "use-dark-mode": "^2.3.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
