--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass": "^7.0.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
